assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand&family=Roboto:wght@300&display=swap');


* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: roboto, sans-serif;
    font-weight: 400;
    color: #3a3a3a;
    background-color: #cbd18f;
}

/* headings and logo */

h1, h2 {
    font-family: Quicksand, sans-serif;
    text-transform: uppercase;
    letter-spacing: 2px;
    color: #3F4A3C;
}

#logo {
    float: left;
    margin-left: 25px;
    font-size: 300%;
}

/* nav links */

#menu {
    font-size: 110%;
    letter-spacing: 2px;
}

#menu, #logo {
    line-height: 75px;
}

#menu li {
    float: right;
    list-style-type: none;
    margin-right: 30px;
}

#menu a {
    text-decoration: none;
    color: inherit;
    padding: 4px 4px;
    border-radius: 5px;
    font-weight: bold;
    transition: all 0.5s ease-in-out;
    border: 1px solid #fff;
    margin: 0 10px;
}

#menu a:hover {
    border: 10;
    box-shadow: 0 0 6px #e3b448;
}

.active {
    border: 10;
    box-shadow: 0 0 6px #e3b448;
}

/* hero-image and intro*/

#section1 {
    width: 100%;
}

#hero-image {
    width: 50%;
    height: 500px;
    background: url('../images/Hero-image.jpeg') no-repeat left center;
    overflow: hidden;
    float: left;
    padding-top: 20px;
}

#introduction {
    width: 50%;
    height: 500px;
    float: right;
    padding-top: 20px;
}

/* text properties for home page */

.h2-home {
    line-height: 40px;
    text-align: center;
    padding: 100px 20px 50px;
}

.p-home {
    line-height: 30px;
    text-align: center;
    padding: 0 20px;
}

/* more info section */

#more-information {
    width: 50%;
    height: 500px;
    float: left;
    padding-top: 20px;
}

#boots {
    width: 50%;
    height: 500px;
    background: url('../images/football-boots-hanging.jpeg') no-repeat center center;
    overflow: hidden;
    float: left;
    padding-top: 20px;
}

/* footer */

.social-networks {
    height: 200px;
    text-align: center;
    background-color: #3a6b35;
    bottom: 0;
}

.social-networks > li {
    display: inline;
}

.social-networks i {
    font-size: 250%;
    margin: 1%;
    padding: 8%;
    color: #e3b448;
}

footer {
    height: 130px;
    left: 0;
    bottom: 0;
    clear: both;
}

/* gallery */

#photos {
    clear: both;
    line-height: 0px;
    column-count: 3;
    column-gap: 5px;
}

#photos img {
    width: 100%;
    border-radius: 5px;
    margin: 5px;
}

/* where and when layout */

#games-available {
    clear: both;
    text-align: center;
    padding: 50px 50px 50px;
}

#left-half {
    height: 500px;
    width: 50%;
    float: left;
    padding-top: 20px;
}

#right-half {
    height: 500px;
    width: 50%;
    float: right;
    padding-top: 20px;
}

#game-1 > h3 {
    text-align: center;
    text-transform: uppercase;
    padding: 10px;
}

#game-2 > h3 {
    text-align: center;
    text-transform: uppercase;
    padding: 10px;
}

/* Where and When table layout */

table {
    width: 66%;
    border-collapse: collapse;
    margin: 17%;
    background-color: #fff;
    color: #3F4A3C;
}

tr, th {
    border: 2px solid #e3b448;
    text-align: left;
    padding: 8px;
}

#heading {
    background-color: #3F4A3C;
    color: #fff;
    text-transform: uppercase;
}

/* Contact us form */

#contact-form {
    clear: both;
    margin: 0 auto;
    width: 400px;
}

.form-overview {
    border: 1px solid #e3b448;
    width: 500px;
    padding: 10px;
}

.form-overview > ul {
    list-style-type: none;
}

.contact-label {
    padding: 10px 10px;
    margin: 10px;
    box-sizing: border-box;
}

.contact-input{
    width: 100%;
    padding: 10px 10px;
    margin: 10px;
    box-sizing: border-box;
}

.submit-button {
    background-color: #3a6b35;
    color: #e3b448;
    border: none;
    padding: 10px 10px;
    margin: 4px 2px;
    cursor: pointer;
}

